# spotMicro

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  servo_calibration.md  servo_calibration_spreadsheet.ods
analysis/: analysis.md
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
docs/: additional_hardware_description.md  joystick_control.md  servo_calibration.md  servo_calibration_spreadsheet.ods  slam_information.md
lcd_monitor/: CMakeLists.txt  package.xml  setup.py
lcd_monitor/launch/: lcd_monitor.launch
lcd_monitor/scripts/: lcd_driver.py  sm_lcd_node.py
lcd_monitor/src/lcd_monitor/: I2C_LCD_driver.py  sm_lcd_driver.py
ros-i2cpwmboard/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
ros-i2cpwmboard/doc/: Doxyfile  header.html
ros-i2cpwmboard/doc/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  group___services.html  group___topics.html  i2cpwm__controller_8cpp.html  i2cpwm__controller_8cpp_source.html  index.html  modules.html
ros-i2cpwmboard/launch/: i2cpwm_node.launch
ros-i2cpwmboard/msg/: Position.msg  PositionArray.msg  Servo.msg  ServoArray.msg  ServoConfig.msg  ServoConfigArray.msg
ros-i2cpwmboard/src/: i2cpwm_controller.cpp
ros-i2cpwmboard/srv/: DriveMode.srv  IntValue.srv  ServosConfig.srv  StopServos.srv
servo_move_cpp/: CMakeLists.txt  package.xml
servo_move_cpp/src/: servo_move_cpp.cpp
servo_move_keyboard/: CMakeLists.txt  package.xml
servo_move_keyboard/launch/: keyboard_move.launch
servo_move_keyboard/scripts/: servoConfigTest.py  servoMoveKeyboard.py  test.py
spot_micro_joy/: CMakeLists.txt  package.xml
spot_micro_joy/launch/: everything.launch
spot_micro_joy/scripts/: spotMicroJoystickMove.py
spot_micro_keyboard_command/: CMakeLists.txt  package.xml
spot_micro_keyboard_command/launch/: control_and_plot.launch  control_and_rviz.launch  control_only.launch  keyboard_command.launch
spot_micro_keyboard_command/scripts/: spotMicroKeyboardMove.py
spot_micro_launch/: CMakeLists.txt  package.xml
spot_micro_launch/launch/: keyboard_control_and_rviz.launch  motion_control_and_hector_slam.launch  slam.launch
spot_micro_motion_cmd/: CMakeLists.txt  package.xml
spot_micro_motion_cmd/config/: spot_micro_motion_cmd.yaml
spot_micro_motion_cmd/data/: usage.txt
spot_micro_motion_cmd/include/spot_micro_motion_cmd/: spot_micro_motion_cmd.h  spot_micro_motion_cmd.hpp  utils.h
spot_micro_motion_cmd/launch/: motion_cmd.launch  run_on_rpi.launch  run_on_rpi_with_lcd.launch  run_standalone.launch  spot_micro_motion_cmd.launch
spot_micro_motion_cmd/lib/smfsm/include/: command.h  spot_micro_fsm.h  spot_micro_idle.h  spot_micro_state.h
spot_micro_motion_cmd/lib/smfsm/src/: spot_micro_fsm.cpp  spot_micro_idle.cpp  spot_micro_state.cpp
spot_micro_motion_cmd/src/: spot_micro_fsm.hpp  spot_micro_motion_cmd.cpp  spot_micro_motion_cmd_node.cpp  utils.cpp
spot_micro_motion_cmd/src/gait_controller/: gait_controller.h
spot_micro_motion_cmd/src/rate_limited_first_order_filter/: rate_limited_first_order_filter.h
spot_micro_motion_cmd/src/smfsm/: command.h  spot_micro_fsm.cpp  spot_micro_fsm.h  spot_micro_idle.cpp  spot_micro_idle.h  spot_micro_stand.cpp  spot_micro_stand.h  spot_micro_state.cpp  spot_micro_state.h  spot_micro_transition_idle.cpp  spot_micro_transition_idle.h  spot_micro_transition_stand.cpp  spot_micro_transition_stand.h  spot_micro_walk.cpp  spot_micro_walk.h
spot_micro_plot/: CMakeLists.txt  package.xml
spot_micro_plot/launch/: start_plotting.launch
spot_micro_plot/scripts/: spotMicroPlot.py
spot_micro_rviz/: CMakeLists.txt  package.xml
spot_micro_rviz/launch/: show_and_move_model_via_gui.launch  show_model.launch  slam.launch
spot_micro_rviz/rviz/: mapping_demo.rviz  spot_micro.rviz  spot_micro_slam.rviz
spot_micro_rviz/urdf/: gen_urdf.sh  spot_micro.urdf.xacro
spot_micro_rviz/urdf/stl/: backpart.stl  foot.stl  frontpart.stl  larm.stl  larm_cover.stl  lfoot.stl  lshoulder.stl  mainbody.stl  rarm.stl  rarm_cover.stl  rfoot.stl  rplidar_main.STL  rshoulder.stl
spot_micro_sandbox/: CMakeLists.txt  package.xml
spot_micro_sandbox/src/: servoMove.py
spot_micro_simple_command/: CMakeLists.txt  package.xml  setup.py
spot_micro_simple_command/scripts/: smsc.py  smsc_node.py
spot_micro_simple_command/src/spot_micro_simple_command/: foo.py  smsc.py
spot_micro_simple_command/src/spot_micro_simple_command/first_order_filter/: README.md  fof.py
spot_micro_simple_command/src/spot_micro_simple_command/first_order_filter/tests/: sample_plots.py
spot_micro_simple_command/src/spot_micro_simple_command/spot_micro_kinematics/: kinematics_conda_env.txt  spot_micro_stick_figure.py
spot_micro_simple_command/src/spot_micro_simple_command/spot_micro_kinematics/tests/: test_spot_micro_stick_figure.py
spot_micro_simple_command/src/spot_micro_simple_command/spot_micro_kinematics/utilities/: spot_micro_kinematics.py  transformations.py
spot_micro_simple_command/src/spot_micro_simple_command/spot_micro_kinematics/utilities/tests/: test_spot_micro_kinematics.py
spot_micro_walk/: CMakeLists.txt  package.xml  setup.py
spot_micro_walk/scripts/: smw_node.py  smw_node_plot.py
spot_micro_walk/src/spot_micro_walk/: Session.vim  run_robot.py  run_robot_plot.py
spot_micro_walk/src/spot_micro_walk/first_order_filter/tests/: test_first_order_filter.py
spot_micro_walk/src/spot_micro_walk/pupper/: Config.py  HardwareConfig.py  HardwareInterface.py  Kinematics.py
spot_micro_walk/src/spot_micro_walk/pupper_src/: Command.py  Controller.py  Gaits.py  IMU.py  JoystickInterface.py  StanceController.py  State.py  SwingLegController.py  Tests.py  Utilities.py
spot_micro_walk/src/spot_micro_walk/spot_micro_kinematics/: README.md
spot_micro_walk/src/spot_micro_walk/spot_micro_kinematics/utilities/tests/: test_spot_micro_kinematics.py  test_transformations.py
